@@ -63,7 +63,7 @@ class Tx_Seminars_Bag_Organizer extends Tx_Seminars_Bag_Abstract {
 	 */
 	protected function createItemFromDbResult() {
 		$this->currentItem = GeneralUtility::makeInstance(
-			'tx_seminars_OldModel_Organizer', 0, $this->dbResult
+			Tx_Seminars_OldModel_Organizer::class, 0, $this->dbResult
 		);
 		$this->valid();
 	}
