@@ -3066,7 +3066,7 @@ class Tx_Seminars_FrontEnd_DefaultController extends Tx_Oelib_TemplateHelper imp
 		$result = '';
 		$organizers = $this->seminar->getOrganizerBag();
 
-		/** @var tx_seminars_OldModel_Organizer $organizer */
+		/** @var Tx_Seminars_OldModel_Organizer $organizer */
 		foreach ($organizers as $organizer) {
 			if ($organizer->hasHomepage()) {
 				$organizerTitle = $this->cObj->getTypoLink(
