@@ -2096,7 +2096,7 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 	/**
 	 * Returns the first organizer.
 	 *
-	 * @return tx_seminars_OldModel_Organizer|NULL
+	 * @return Tx_Seminars_OldModel_Organizer|null
 	 */
 	public function getFirstOrganizer() {
 		if (!$this->hasOrganizers()) {
@@ -2125,7 +2125,7 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 		$result = array();
 
 		$organizers = $this->getOrganizerBag();
-		/** @var tx_seminars_OldModel_Organizer $organizer */
+		/** @var Tx_Seminars_OldModel_Organizer $organizer */
 		foreach ($organizers as $organizer) {
 			$result[] = $plugin->cObj->getTypoLink(
 				htmlspecialchars($organizer->getName()),
@@ -2151,7 +2151,7 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 		$result = array();
 
 		$organizers = $this->getOrganizerBag();
-		/** @var tx_seminars_OldModel_Organizer $organizer */
+		/** @var Tx_Seminars_OldModel_Organizer $organizer */
 		foreach ($organizers as $organizer) {
 			$result[] = $organizer->getName() . ($organizer->hasHomepage() ? ', ' . $organizer->getHomepage() : '');
 		}
@@ -2174,7 +2174,7 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 		$result = array();
 
 		$organizers = $this->getOrganizerBag();
-		/** @var tx_seminars_OldModel_Organizer $organizer */
+		/** @var Tx_Seminars_OldModel_Organizer $organizer */
 		foreach ($organizers as $organizer) {
 			$result[] = '"' . $organizer->getName() . '"' . ' <' . $organizer->getEMailAddress() . '>';
 		}
@@ -2196,7 +2196,7 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 		$result = array();
 
 		$organizers = $this->getOrganizerBag();
-		/** @var tx_seminars_OldModel_Organizer $organizer */
+		/** @var Tx_Seminars_OldModel_Organizer $organizer */
 		foreach ($organizers as $organizer) {
 			$result[] = $organizer->getEMailAddress();
 		}
@@ -2218,7 +2218,7 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 		$result = array();
 
 		$organizers = $this->getOrganizerBag();
-		/** @var tx_seminars_OldModel_Organizer $organizer */
+		/** @var Tx_Seminars_OldModel_Organizer $organizer */
 		foreach ($organizers as $organizer) {
 			$emailFooter = $organizer->getEmailFooter();
 			if ($emailFooter !== '') {
@@ -2273,7 +2273,7 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 			'tx_seminars_seminars_organizing_partners_mm'
 		);
 
-		/** @var tx_seminars_OldModel_Organizer $organizer */
+		/** @var Tx_Seminars_OldModel_Organizer $organizer */
 		foreach ($organizerBag as $organizer) {
 			$result[] = $plugin->cObj->getTypoLink(
 				$organizer->getName(),
