@@ -15,6 +15,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5604] Rename tx_seminars_OldModel_Organizer to Tx_Seminars_OldModel_Organizer
 - [#5603] Rename tx_seminars_OldModel_Category to Tx_Seminars_OldModel_Category
 - [#5601] Rename tx_seminars_Model_TimeSlot to Tx_Seminars_Model_TimeSlot
 - [#5600] Rename tx_seminars_Model_TargetGroup to Tx_Seminars_Model_TargetGroup
